[fix] random styling issue where completed tables shifted when others got added

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -59,6 +59,10 @@
   margin: 75px 0px 0px 2%;
 }
 
+#completed-table {
+  height: 0px;
+}
+
 /*
 ============ Bartenders Nav ================
 */
